# RustTI-how-to-guides

./: Cargo.toml  README.md  bulk_vs_single.md  choose_constant_model_type.md  choose_constant_type_model.md  choose_deviation_model.md  choose_period.md  load_csv.md  mcginley_dynamic.md  personalised_moving_average.md
examples/: bulk_vs_single.rs  choose_constant_model_type.rs  choose_deviation_model.rs  choose_period.rs  data.csv  load_csv.rs  mcginley_dynamic.rs  personalised_moving_average.rs
